--- a/assets/css/type.css
+++ b/assets/css/type.css
@@ -37,7 +37,8 @@ p {
 	font-family: Domine, sans-serif;
 	font-size: 13px;
 	color: #575757;
-	margin-top: 30px;
+   margin-top: 10px;
+	margin-bottom: 15px;
 	line-height: 25px;
 	clear: both;
 	float: none;
