--- a/assets/css/type.css
+++ b/assets/css/type.css
@@ -23,6 +23,11 @@ h3 {
 	line-height: 25px;
 }
 
+header.main-header h1 a {
+	color: #1B1B1B;
+	text-decoration: none;
+}
+
 header.post-header a {
 	color: #1B1B1B;
 	text-decoration: none;
