--- a/assets/main.css
+++ b/assets/main.css
@@ -1,18 +1,12 @@
 @font-face {
    font-family: 'EdmondsansMedium';
-   src: url('type/edmondsans-medium.eot');
-   src: url('type/edmondsans-medium.eot') format('embedded-opentype'),
+   src: url('type/edmondsans-medium.eot?#iefix') format('embedded-opentype'),
       url('type/edmondsans-medium.woff') format('woff'),
       url('type/edmondsans-medium.ttf') format('truetype'),
       url('type/edmondsans-medium.svg#EdmondsansMedium') format('svg');
 }
 
 /* general */
-
-* {
-   margin : 0;
-   padding : 0;
-}
 
 body {
    background: #ebebeb;
@@ -31,6 +25,7 @@ body > header nav {
 
 body > header nav ul {
    list-style : none;
+   padding : 0;
 }
 
 body > section {
@@ -44,7 +39,7 @@ body > footer nav {
    padding: 0 0 30px 0;
 }
 
-div.inner {
+.inner {
    margin : 0 75px 0 75px;
    padding-bottom : 30px;
    background : #ffffff;
@@ -83,8 +78,7 @@ div.inner {
 }
 
 .post section.text {
-   padding : 25px 0 20px 0;
-
+   padding : 20px 0 20px 0;
 }
 
 .post section.text img {
@@ -92,7 +86,7 @@ div.inner {
 }
 
 .post section.text blockquote {
-   margin-left : -25px;
+   margin-left : -20px;
    padding-left : 20px;
    border-left : 1px #B7B7B7 solid;
 }
@@ -101,7 +95,7 @@ div.inner {
    padding : 1px;
 
    font-size : .8em; 
-   font-family : courier !important;
+   font-family : 'Courier New', Courier, monospace;
    color : black;
 
    background : #eeeeee;
@@ -141,6 +135,7 @@ div.inner {
 body > header h1 a {
    color : #1b1b1b;
    text-decoration : none;
+   font-size : 17px;
 }
 
 body > footer nav a {
@@ -166,15 +161,10 @@ body > footer a:hover {
 h1, 
 h2 {
    font-family : Domine, sans-serif;
-   font-size : 17px;
    color : #1b1b1b;
    font-weight : normal;
    position : relative;
    height : 17px;
-}
-
-h2 {
-   font-size : 14px;
 }
 
 h3 {
@@ -202,6 +192,7 @@ p {
 
 ul {
    margin : 10px auto;
+   padding : 0;
 }
 
 nav ul li {
@@ -220,7 +211,7 @@ nav ul li a {
 
 nav ul li a:hover {
    color : #1b1b1b;
-   border-bottom : 1px #1B1B1B solid;
+   border-bottom : 1px #1b1b1b solid;
 }
 
 .time {
