--- a/assets/main.css
+++ b/assets/main.css
@@ -81,6 +81,11 @@ body > footer nav {
    padding : 20px 0 20px 0;
 }
 
+.post section.text-share {
+   padding-bottom : 50px !important;
+   border-bottom : 1px #b7b7b7 solid;
+}
+
 .post section.text img {
    width : 100%;
 }
@@ -112,11 +117,6 @@ body > footer nav {
    line-height : 20px;
    clear : both;
    float : none;
-}
-
-.post section.text-share {
-   border-bottom : 1px #b7b7b7 solid;
-   padding-bottom : 50px;
 }
 
 .post footer {
@@ -223,3 +223,7 @@ nav ul li a:hover {
    font-size : 13px;
 }
 
+
+#rights {
+   
+}
